Synced Java version of DeltaBlue with Ruby and SOM
Signed-off-by: Stefan Marr <git@stefan-marr.de>